# sasformer

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt
data/: label_to_model.pkl  model_to_label.pkl  model_to_param_idxs.pkl  scales.json
sasformer/: create_data.py  data.py  example.ipynb  hpsearch.py  model.py  results.py  train.py
sasformer/perceiver_io/: __init__.py  attention.py  decoders.py  encoder.py  perceiver.py  positional_encoding.py
scripts/: results.sh  train_sasformer.sh
src/: create_data.py  data.py  hpsearch.py  model.py  results.py  train.py
src/perceiver_io/: __init__.py  attention.py  decoders.py  encoder.py  perceiver.py
