[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sasformer"
version = "0.1.0"
description = "Multi-task scattering-model classification and parameter regression of nanostructures from small-angle scattering data."
authors = [
    {name = "Batu Yildirim", email = "by256@cam.ac.uk"},
]
license = { file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/by256/sasformer"
Repository = "https://github.com/by256/sasformer"
Documentation = "https://github.com/by256/sasformer/blob/master/README.md"

[tool.setuptools]
packages = ["sasformer"]